// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Accordion Group (snapshot) 1`] = `
<div
  className="accordion-group"
>
  <div
    className="accordion"
  >
    <div
      className="accordion-header"
      onClick={[Function]}
    >
      <span
        className="material-icons accordion-arrow"
        color=""
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontSize": 24,
            "muiPrepared": true,
            "position": "relative",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
          }
        }
      >
        arrow_drop_down
      </span>
      <div>
        Header #1
      </div>
    </div>
  </div>
  <div
    className="accordion"
  >
    <div
      className="accordion-header"
      onClick={[Function]}
    >
      <span
        className="material-icons accordion-arrow"
        color=""
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontSize": 24,
            "muiPrepared": true,
            "position": "relative",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
          }
        }
      >
        arrow_drop_down
      </span>
      <div>
        Header #2
      </div>
    </div>
  </div>
  <div
    className="accordion"
  >
    <div
      className="accordion-header"
      onClick={[Function]}
    >
      <span
        className="material-icons accordion-arrow"
        color=""
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "color": "rgba(0, 0, 0, 0.87)",
            "display": "inline-block",
            "fontSize": 24,
            "muiPrepared": true,
            "position": "relative",
            "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
            "userSelect": "none",
          }
        }
      >
        arrow_drop_down
      </span>
      <div>
        Header #3
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion Closed Accordion (snapshot) 1`] = `
<div
  className="accordion"
>
  <div
    className="accordion-header"
    onClick={[Function]}
  >
    <span
      className="material-icons accordion-arrow"
      color=""
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "display": "inline-block",
          "fontSize": 24,
          "muiPrepared": true,
          "position": "relative",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
        }
      }
    >
      arrow_drop_down
    </span>
    <div>
      Default Header
    </div>
  </div>
</div>
`;

exports[`Accordion Opened Accordion (snapshot) 1`] = `
<div
  className="accordion is-opened"
>
  <div
    className="accordion-header is-opened"
    onClick={[Function]}
  >
    <span
      className="material-icons accordion-arrow is-opened"
      color=""
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "display": "inline-block",
          "fontSize": 24,
          "muiPrepared": true,
          "position": "relative",
          "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          "userSelect": "none",
        }
      }
    >
      arrow_drop_down
    </span>
    <div>
      Default Header
    </div>
  </div>
  <div
    className="accordion-body"
  >
    <div>
      Default Header
    </div>
  </div>
</div>
`;
